--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,10 +19,10 @@ jobs:
         run: |
           if ${{ github.event.release.prerelease }}; then
             echo "Publishing pre-release..."
-            pnpm publish --verbose --access=public --tag next
+            npm publish --verbose --access=public --tag next
           else
             echo "Publishing release..."
-            pnpm publish --verbose --access=public
+            npm publish --verbose --access=public
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
