feat: esnext and nodenext
split strict out to its own file since now we can extend multiple tsconfig

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,12 +1,7 @@
 {
-  "extends": "tsconfig.strict.json",
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-
-    "outDir": "dist",
-    "sourceMap": true
-  },
-  "include": ["src/**/*.ts"]
+    "moduleResolution": "NodeNext"
+  }
 }
