--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -1,12 +1,8 @@
 {
-  "extends": ["tsconfig.strict.json"],
   "compilerOptions": {
     "target": "ESNext",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-
-    "outDir": "dist",
-    "sourceMap": true
-  },
-  "include": ["src/**/*.ts"]
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
+  }
 }
