--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jmondi/tsconfig",
-  "version": "0.2.0-alpha.6",
+  "version": "0.2.0",
   "author": "Jason Raimondi <jason@raimondi.us>",
   "description": "An opinionated TypeScript config preset for strict and standardized development. Configs for both Node.js and browser environments.",
   "type": "module",
